--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "cra-template": "1.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "react-scripts": "5.0.1"
+    "react-player": "^2.16.0",
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
